# adminorbit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
adminorbit/: settings.py  urls.py
apps/common/user/migrations/: 0001_initial.py  0002_tenantuser.py
apps/common/user/models/: __init__.py  platform_user.py  tenant_user.py
apps/core/: models.py
apps/platform_admin/tenant/: models.py
apps/platform_admin/tenant/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
